--- a/app.json
+++ b/app.json
@@ -13,20 +13,31 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.shahmeerbukhari.fitnessapp"
     },
     "android": {
+      "package": "com.shahmeerbukhari.fitnessapp",
+      "versionCode": 1,
+      "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
-    ]
+      "expo-font",
+      "expo-splash-screen"
+    ],
+
+    "owner": "shahmeer_bukhari",
+    "extra": {
+      "eas": {
+        "projectId": "54b2253b-1e69-41a9-b9d8-f3669c59ec7c"
+      }
+    }
   }
 }
