--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
+    "expo-splash-screen": "^0.24.0",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "react": "19.0.0",
@@ -35,6 +36,9 @@
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "typescript": "~5.8.3"
+  },
+  "overrides": {
+    "react-dom": "19.0.0"
   },
   "private": true
 }
